Fix color scheme for dark mode

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -11,6 +11,7 @@
 .skills,
 .fediverse {
   padding-bottom: 3rem;
+  color: var(--clr-text);
 }
 
 .body {
